// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`template nested template 1`] = `
"
            <ul>
                
            <li>
                <b>Hello world</b>
            </li>
        
            </ul>
        "
`;

exports[`template render array 1`] = `
"
            <ul>
                <li>one</li><li>two</li><li>three</li>
            </ul>
        "
`;

exports[`template render async 1`] = `
"
            <ul>
                <li>two</li>
            </ul>
        "
`;

exports[`template render nothing for null 1`] = `
"
            <ul>
                
            </ul>
        "
`;
